--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
+    <script>
+      window.console.error = (...args) => {
+        if (!args[0].includes('message channel closed')) {
+          console.error.apply(console, args);
+        }
+      };
+    </script>
   </head>
   <body>
     <div id="root"></div>
